# gmnovo

./: .gitignore  Makefile.am  README.md  bfgminer  configure.ac  driver-cpu.c  driver-opencl.c  gen-version.sh  make-release  miner.c  miner.h  sha256_4way.c  sha256_altivec_4way.c  sha256_generic.c  sha256_sse2_amd64.c  sha256_sse2_i386.c  util.c
